--- a/web_portal/src/main/webapp/cart.html
+++ b/web_portal/src/main/webapp/cart.html
@@ -71,16 +71,13 @@
 				<div class="cart-item-list" ng-repeat="cart in cartList">
 					<div class="cart-shop">
 						<input type="checkbox" name="" id="" value="" />
-
 						<span class="shopname self">{{cart.sellerName}}  【商家ID:{{cart.sellerId}}】</span>
 					</div>
 					<div class="cart-body">
 						<div class="cart-list" ng-repeat="item in cart.orderItemList">
 							<ul class="goods-list yui3-g">
 								<li class="yui3-u-1-24">
-									<!--<input type="checkbox" name="" id="" value="" />-原版-->
-									<input type="checkbox" ng-click="updateSelection($event,item.itemId)" />
-									<!--模板<td><input  type="checkbox" ng-click="updateSelection($event,entity.id)"></td>-->
+									<input type="checkbox" name="" id="" value="" />
 								</li>
 								<li class="yui3-u-11-24">
 									<div class="good-item">
@@ -97,12 +94,8 @@
 								</li>
 								<li class="yui3-u-1-8"><span class="sum">{{item.totalFee}}</span></li>
 								<li class="yui3-u-1-8">
-									<a href="#none">删除</a><br />\
+									<a href="#none">删除</a><br />
 									<a href="#none">移到我的关注</a>
-									<button type="button" class="btn btn-default" title="删除" ng-click="collection()"> 删除</button>
-									<a href="#none"title="删除" ng-click="addToCollection(item.itemId)">移到我的关注</a>
-									<!--按钮形式<button type="button" class="btn btn-default" title="删除" ng-click="addToCollection(item.itemId)"><i class="fa fa-trash-o"></i> 移到我的关注2</button>-->
-
 								</li>
 							</ul>
 						</div>
@@ -120,9 +113,7 @@
 				</div>
 				<div class="option">
 					<a href="#none">删除选中的商品</a>
-					<!--<a href="#none">移到我的关注</a>-->
-					<a href="#none"title="删除" ng-click="addGoodsToCollection()">移到我的关注</a>
-					<!--<button type="button" class="btn btn-default" title="删除" ng-click="addGoodsToCollection()"><i class="fa fa-trash-o"></i> 移到我的关注2</button>-->
+					<a href="#none">移到我的关注</a>
 					<a href="#none">清除下柜商品</a>
 				</div>
 				<div class="toolbar">
@@ -137,7 +128,6 @@
 				</div>
 			</div>
 			<div class="clearfix"></div>
-
 			<div class="deled">
 				<span>已删除商品，您可以重新购买或加关注：</span>
 				<div class="cart-list del">
