--- a/web_shop/src/main/webapp/admin/index.html
+++ b/web_shop/src/main/webapp/admin/index.html
@@ -354,6 +354,23 @@
 				    </li>
 					
 				    <!-- 菜单 /-->
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-folder"></i>
+                            <span>模板管理</span>
+                            <span class="pull-right-container">
+				       			<i class="fa fa-angle-left pull-right"></i>
+				   		 	</span>
+                        </a>
+                        <ul class="treeview-menu">
+
+                            <li id="admin-login">
+                                <a href="type_template.html" target="iframe">
+                                    <i class="fa fa-circle-o"></i> 类型模板申请
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
 
                 </ul>
             </section>
