增加了一个注释

--- a/web_manager/src/main/webapp/admin/usermanagement.html
+++ b/web_manager/src/main/webapp/admin/usermanagement.html
@@ -94,7 +94,7 @@
 									     <!-- <td>{{jsonToString(entity.phone,'text')}}</td>
 									      <td>{{jsonToString(entity.status,'text')}}</td>-->
 									      <!--<td>{{jsonToString(entity.customAttributeItems,'text')}}</td>		-->
-		                                  <td class="text-center">                                           
+		                                  <td class="text-center">                             <!--用id获取list集合内的一个元素调用findOne方法查询-->
 		                                 	  <button type="button" class="btn bg-olive btn-xs" ng-click="findOne(entity.id)" data-toggle="modal" data-target="#editModal" >修改</button>                                           
 		                                  </td>
 			                          </tr>
